--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("HelloWorld", { greeting: "Hello" }) %>
+<%= react_component("Header", { title: "Welcome to Luscious Lashes!" }) %>
