--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
   </head>
 
   <body>
-    <%= javascript_pack_tag 'application' %>
-    <%= yield %>
+    <div class="container">
+      <%= javascript_pack_tag 'application' %>
+      <%= yield %>
+    </div>
   </body>
 </html>
