--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,8 +11,8 @@
  * It is generally better to create a new file per style scope.
  *
 
- @import "materialize";
 
  *= require_tree .
+ *= require "materialize"
  *= require_self
  */
